# force-torque-sensor

./: .gitignore  .gitmodules  CMakeLists.txt  FTSensorConfig.cmake.in  FTSensorConfigVersion.cmake.in  README.md  ft_sensor.rviz  package.xml
class/: CMakeLists.txt
class/include/FTSensor/: FTSensor.h
class/src/: FTSensor.cpp
config/: LowPass_Filter.yaml  force_torque_sensor_control.yaml  force_torque_sensor_controller.ops  force_torque_sensor_controller.yaml  ft_sensor_params.yaml  hardware_interface.yaml  hardware_interfaces.yaml  imu_sensor_params.yaml  joint_names.yaml  joint_state_controller.yaml
examples/: CMakeLists.txt
include/FTSensor/: FTSensor.h  config.h.in  force_torque_sensor_filtering.h  force_torque_sensor_sim_ros_control.h
include/IMUSensor/: imu_sensor_filtering.h
include/ati-force-torque-sensor/: ati_ft_sensor_hw.h
launch/: FTsensor.launch  FTsensor_solo.launch  control_sensor_simulation.launch  cylinder_spawner.launch  display.launch  display_simulation.launch  ft_sensor_hw.launch.xml  ft_sensor_params.yaml  ft_simulation_display.launch  gamma_display_simulation.launch  my_config_rviz.rviz  nano17_display_simulation.launch  simulation_ft_sensor_hw.launch.xml
matlab/: createFit.m  filter_design.m  hand_weight_fitting.m
model/: ft_sensor.gazebo.xacro  ft_sensor.trasmission.xacro  ft_sensor.urdf.xacro  ft_sensor_gamma.urdf.xacro  models.urdf.xacro
model/meshes/: gamma.stl
robot/: cylinder.urdf.xacro  ft_sensor_gamma.urdf.xacro  gamma.urdf.xacro  nano17.urdf.xacro
ros/ftsensor/: CMakeLists.txt  package.xml
ros/ftsensor/launch/: FTsensor.launch  FTsensor_solo.launch
ros/ftsensor/src/: FT_sensor_node.cpp
src/: FTSensor.cpp  ati_ft_sensor_hw.cpp  ati_sensor_node.cpp  force_torque_sensor_sim_ros_control.cpp  ft_sensor_hw.cpp  gazebo_ros_imu_sensor.cpp  imu_trans_function_filter.cpp  trans_function_filter.cpp
test/: simple_reader.cpp
