<?xml version="1.0"?>
<package>
  <name>force_torque_sensor</name>
  <version>0.0.0</version>
  <description>The package for FT sensors using the ATInetbox</description>

  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>force_torque_sensor_controller</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>

  <export>
    
  </export>
</package>